# ayatana-indicator-sound

./: .build.yml  .bzrignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile.am  Makefile.am.coverage  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  build.sh  config.h.in  configure  configure.ac
.pc/: applied-patches
.pc/correct_ldflags_use.patch/src/: Makefile.am
.pc/disable_Werror.patch/src/: Makefile.am
.pc/fix-864405.patch/src/: transport-widget.c
.pc/lp_945827.patch/src/: mpris2-controller.vala  mpris2-interfaces.c  mpris2-interfaces.vala
.pc/lp_960846.patch/src/: mpris2-controller.c  mpris2-controller.vala
.pc/lp_992262.patch/src/: music-player-bridge.c
.pc/sound_xubuntu.patch/src/: sound-service-dbus.c
cmake/: UseGSettings.cmake
data/: 50-org.ayatana.AccountsService.Sound.pkla  50-org.ayatana.indicator.sound.AccountsService.pkla  50-org.ayatana.indicator.sound.AccountsService.rules  CMakeLists.txt  Makefile.am  Makefile.in  ayatana-indicator-sound.conf.in  ayatana-indicator-sound.desktop.in  ayatana-indicator-sound.service.in  ayatana-indicator-sound.upstart.desktop.in  com.canonical.indicator.sound  com.canonical.indicator.sound.AccountsService.xml  com.canonical.indicator.sound.gschema.xml  com.canonical.indicators.sound.gschema.xml  indicator-sound.conf.in  indicator-sound.desktop.in  indicator-sound.schemas.in  indicator-sound.service.in  indicator-sound.upstart.desktop.in  org.ayatana.AccountsService.Sound.policy  org.ayatana.AccountsService.Sound.xml  org.ayatana.indicator.sound  org.ayatana.indicator.sound.AccountsService.policy  org.ayatana.indicator.sound.AccountsService.xml  org.ayatana.indicator.sound.gschema.xml  org.ayatana.sound.gschema.xml
data/icons/: Makefile.am  Makefile.in
data/icons/16x16/: Makefile.in
data/icons/16x16/status/: Makefile.am  Makefile.in
data/icons/scalable/: Makefile.in
data/icons/scalable/status/: Makefile.am  Makefile.in
debian/: ayatana-indicator-sound.links  changelog  control  copyright  indicator-sound.maintscript  postinst  rules  source_indicator-sound.py  watch
debian/patches/: 01_fix_FTBFS.patch  correct_ldflags_use.patch  dbusmenu_05_90.patch  debian-changes-0.7.3-0ubuntu1  disable_Werror.patch  fix-864405.patch  gtk3_define.patch  lazy_init.patch  lp_750823.patch  lp_759390.patch  lp_902715.patch  lp_945827.patch  lp_960846.patch  lp_992262.patch  series  sound_nua.patch  sound_ubuntustudio.patch  sound_xubuntu.patch
include/: CMakeLists.txt
include/lomiri/gmenuharness/: MatchResult.h  MatchUtils.h  MenuItemMatcher.h  MenuMatcher.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-sound.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  (+99 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  accounts-service-access.vala  accounts-service-privacy-settings.vala  accounts-service-sound-settings.vala  accounts-service-system-sound-settings.vala  accounts-service-user.vala  active-sink.c  active-sink.h  bus-watch-namespace.c  com.canonical.indicator.sound  com.canonical.sound.indicator  common-defs.h  config.vala.in  dbus-menu-manager.c  dbus-menu-manager.h  dbus-shared-names.h  device.c  device.h  familiar-players-db.c  familiar-players-db.vala  fetch-file.c  fetch-file.vala  freedesktop-interfaces.c  freedesktop-interfaces.vala  gen-sound-service.xml.c  gen-sound-service.xml.h  greeter-broadcast.vala  gtk-application-player.vala  indicator-sound.c  indicator-sound.h  info-notification.vala  main.c  main.vala  media-player-list-greeter.vala  media-player-list-mpris.vala  media-player-list.vala  media-player-mpris.vala  media-player-user.vala  (+94 more)
src/gmenuharness/: CMakeLists.txt  MatchResult.cpp  MatchUtils.cpp  MenuItemMatcher.cpp  MenuMatcher.cpp
tests/: CMakeLists.txt  Makefile.am  Makefile.in  accounts-service-mock.h  accounts-service-user.cc  greeter-list.cc  gtest-gvariant.h  indicator-fixture.h  indicator-test.cc  manual  media-player-list-mock.vala  media-player-mock.vala  media-player-user.cc  mockpulse.c  mockpulse.h  name-watch-test.cc  notifications-mock.h  notifications-test.cc  options-mock.vala  pa-mock.c  pa-mock.cpp  sound-menu-test.cc  sound-menu.cc  test-defines.h  test-indicator-sound-dbus-client.c  test-indicator-sound-dbus-server.c  test-indicator-sound.c  test-pulse-manager.c  volume-control-mock.vala  volume-control-test.cc  volume-warning-mock.vala
tests/accounts-mock/: AccountsDefs.h  AccountsMock.cpp  AccountsMock.h  AccountsServiceSoundMock.cpp  AccountsServiceSoundMock.h  CMakeLists.txt  main.cpp
tests/dbus-types/: CMakeLists.txt  com.canonical.AccountsService.Sound.xml  com.lomiri.AccountsService.Sound.xml  dbus-action-result.cpp  dbus-action-result.h  dbus-types.h  org.PulseAudio.Ext.StreamRestore1.xml  org.ayatana.AccountsService.Sound.xml  org.freedesktop.Accounts.xml  org.freedesktop.DBus.Properties.xml  org.gtk.Actions.xml  org.gtk.Menus.xml  pulseaudio-volume.cpp  pulseaudio-volume.h
tests/integration/: CMakeLists.txt  indicator-sound-test-base.cpp  indicator-sound-test-base.h  main.cpp  test-indicator.cpp
tests/integration/utils/: dbus-pulse-volume.cpp  dbus-pulse-volume.h  get-volume.cpp  set-volume.cpp
tests/service-mocks/: CMakeLists.txt  DBusPropertiesNotifier.cpp  DBusPropertiesNotifier.h
tests/service-mocks/accounts-mock/: AccountsDefs.h  AccountsMock.cpp  AccountsMock.h  AccountsServiceSoundMock.cpp  AccountsServiceSoundMock.h  CMakeLists.txt  com.lomiri.AccountsService.Sound.Mock.xml  com.ubuntu.AccountsService.Sound.Mock.xml  main.cpp  org.ayatana.AccountsService.Sound.Mock.xml  org.freedesktop.Accounts.Mock.xml
tests/service-mocks/media-player-mpris-mock/: CMakeLists.txt  MediaPlayerMprisDefs.h  MediaPlayerMprisMock.cpp  MediaPlayerMprisMock.h  main.cpp  player-update.cpp
vapi/: Indicate-0.2.vapi  common-defs.vapi  config.vapi  indicate.vapi  lomiri-url-dispatcher.vapi  music-bridge.vapi
(+1 files in other folders)
